--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
   "name": "remix-test",
-  "type": "module",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "volta": {
-    "node": "18.19.0"
+  "devDependencies": {
+    "@remix-run/dev": "^2.3.1"
   },
   "dependencies": {
-    "@remix-run/node": "2.3.1",
-    "@remix-run/react": "2.3.1",
-    "@remix-run/serve": "2.3.1",
-    "isbot": "3.7.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@remix-run/dev": "2.3.1"
+    "@remix-run/node": "^2.3.1",
+    "@remix-run/react": "^2.3.1",
+    "@remix-run/serve": "^2.3.1",
+    "isbot": "^3.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
